attempt to fix overflow problem on video

--- a/src/Home/style.css
+++ b/src/Home/style.css
@@ -17,6 +17,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  height: 100%;
+  width: 100%;
 }
 .box video {
   /* border-radius: 1rem; */
